force-app/main/default/objects/sfLma__Package_Version__c/sfLma__Package_Version__c.object-meta.xml
<CustomObject>
    <description>This object represents a specific version of a package uploaded by the developer to the AppExchange. Licenses relate to this object, since a user has a specific version installed in their Salesforce organization.</description>
    <label>Package Version</label>
    <nameField>
        <label>Package Version Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Package Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>