force-app/main/default/objects/sfLma__Package_Version__c/fields/sfLma__Package__c.field-meta.xml
<CustomField>
    <fullName>sfLma__Package__c</fullName>
    <label>Package</label>
    <referenceTo>sfLma__Package__c</referenceTo>
    <relationshipName>R00N30000001JvR7EAK</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>