force-app/main/default/objects/sfLma__Package_Version__c/fields/sfLma__Sequence__c.field-meta.xml
<CustomField>
    <fullName>sfLma__Sequence__c</fullName>
    <description>Package version sequence</description>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>