force-app/main/default/objects/sfLma__Package_Version__c/fields/sfLma__Version_ID__c.field-meta.xml
<CustomField>
    <fullName>sfLma__Version_ID__c</fullName>
    <label>Version ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>