force-app/main/default/objects/sfLma__Package_Version__c/fields/sfLma__Version_Number__c.field-meta.xml
<CustomField>
    <fullName>sfLma__Version_Number__c</fullName>
    <label>Version Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>